--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -5,6 +5,13 @@ ENV SPARK_HOME /usr/local/lib/python3.7/dist-packages/pyspark
 ENV PATH "$PATH:$SPARK_HOME/sbin:$SPARK_HOME/bin"
 ENV PYSPARK_PYTHON python3
 
+# source: https://cloud.google.com/storage/docs/gsutil_install#linux
+RUN curl -sSLO https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-334.0.0-linux-x86_64.tar.gz && \
+    tar -xf google-cloud-sdk-334.0.0-linux-x86_64.tar.gz && \
+    curl -sSLO https://dl.k8s.io/release/v1.19.7/bin/linux/amd64/kubectl && \
+    install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+ENV PATH $PATH:/google-cloud-sdk/bin
+
 RUN hail-apt-get-install \
     git \
     htop \
