--- a/docker/Makefile
+++ b/docker/Makefile
@@ -12,33 +12,38 @@ SERVICE_JAVA_RUN_BASE_IMAGE := $(DOCKER_PREFIX)/service-java-run-base:$(TOKEN)
 HAIL_PUBLIC_IMAGE := $(DOCKER_PREFIX)/hail-public:$(TOKEN)
 GENETICS_PUBLIC_IMAGE := $(DOCKER_PREFIX)/genetics-public:$(TOKEN)
 
-hail-ubuntu: hail-ubuntu-stmp
-hail-ubuntu-stmp: hail-ubuntu/Dockerfile hail-ubuntu/hail-pip-install hail-ubuntu/pip.conf hail-ubuntu/hail-apt-get-install
+.PHONY: hail-ubuntu hail-ubuntu-image-ref
+hail-ubuntu: hail-ubuntu-image-ref
+hail-ubuntu-image-ref: hail-ubuntu/Dockerfile hail-ubuntu/hail-pip-install hail-ubuntu/pip.conf hail-ubuntu/hail-apt-get-install
 	python3 ../ci/jinja2_render.py '{"global":{"docker_prefix":"$(DOCKER_PREFIX)"}}' hail-ubuntu/Dockerfile hail-ubuntu/Dockerfile.out
 	../docker-build.sh hail-ubuntu Dockerfile.out $(HAIL_UBUNTU_IMAGE)
-	echo $(HAIL_UBUNTU_IMAGE) > hail-ubuntu-stmp
+	echo $(HAIL_UBUNTU_IMAGE) > $@
 
-base: hail-ubuntu-stmp Dockerfile.base core-site.xml requirements.txt ../pylintrc ../setup.cfg
+.PHONY: base base-image-ref
+base: base-image-ref
+base-image-ref: hail-ubuntu-stmp Dockerfile.base core-site.xml requirements.txt ../pylintrc ../setup.cfg
 	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"'$$(cat hail-ubuntu-stmp)'"}}' Dockerfile.base Dockerfile.base.out
 	../docker-build.sh .. docker/Dockerfile.base.out $(BASE_IMAGE)
-	echo $(BASE_IMAGE) > base
+	echo $(BASE_IMAGE) > $@
 
 .PHONY: hail_version
 hail_version:
 	$(MAKE) -C ../hail python/hailtop/hail_version
 	cp ../hail/python/hailtop/hail_version ../hail_version
 
-.PHONY: service-base
-service-base: base hail_version
+.PHONY: service-base service-base-image-ref
+service-base: service-base-image-ref
+service-base-image-ref: base hail_version
 	python3 ../ci/jinja2_render.py '{"base_image":{"image":"'$$(cat base)'"}}' Dockerfile.service-base Dockerfile.service-base.out
 	../docker-build.sh .. docker/Dockerfile.service-base.out $(SERVICE_BASE_IMAGE)
-	echo $(SERVICE_BASE_IMAGE) > service-base
+	echo $(SERVICE_BASE_IMAGE) > $@
 
-.PHONY: service-java-run-base
-service-java-run-base: hail-ubuntu-stmp hail_version
+.PHONY: service-java-run-base service-java-run-base-image-ref
+service-java-run-base: service-java-run-base-image-ref
+service-java-run-base-image-ref: hail-ubuntu-stmp hail_version
 	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"'$$(cat hail-ubuntu-stmp)'"}}' Dockerfile.service-java-run-base Dockerfile.service-java-run-base.out
 	../docker-build.sh .. docker/Dockerfile.service-java-run-base.out $(SERVICE_JAVA_RUN_BASE_IMAGE)
-	echo $(SERVICE_JAVA_RUN_BASE_IMAGE) > service-java-run-base
+	echo $(SERVICE_JAVA_RUN_BASE_IMAGE) > $@
 
 .PHONY: deploy
 deploy: build
