complete transition to -image-ref

--- a/admin-pod/Makefile
+++ b/admin-pod/Makefile
@@ -4,5 +4,5 @@ include ../config.mk
 deploy:
 	! [ -z $(NAMESPACE) ]  # call this like: make deploy NAMESPACE=default
 	$(MAKE) -C ../docker service-base
-	python3 ../ci/jinja2_render.py '{"service_base_image":{"image":"'$$(cat ../docker/service-base)'"}}' admin-pod.yaml admin-pod.yaml.out
+	python3 ../ci/jinja2_render.py '{"deploy":$(DEPLOY),"service_base_image":{"image":"'$$(cat ../docker/service-base-image-ref)'"}}' admin-pod.yaml admin-pod.yaml.out
 	kubectl -n $(NAMESPACE) apply -f admin-pod.yaml.out
