--- a/gateway/Makefile
+++ b/gateway/Makefile
@@ -8,7 +8,7 @@ GATEWAY_IMAGE := $(DOCKER_PREFIX)/gateway:$(TOKEN)
 
 build:
 	$(MAKE) -C ../docker hail-ubuntu
-	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"hail-ubuntu"}}' Dockerfile Dockerfile.out
+	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"'$$(cat ../docker/hail-ubuntu-image-ref)'"}}' Dockerfile Dockerfile.out
 	python3 ../ci/jinja2_render.py '{"domain": "$(DOMAIN)","subdomains":[$(shell sed -e 's/\(.*\)/"\1"/' ../letsencrypt/subdomains.txt | paste -s -d, -)]}' gateway.nginx.conf gateway.nginx.conf.out
 	../docker-build.sh . Dockerfile.out $(GATEWAY_IMAGE)
 
