--- a/batch/Makefile
+++ b/batch/Makefile
@@ -18,7 +18,7 @@ check:
 .PHONY: build-batch
 build-batch:
 	$(MAKE) -C ../docker service-base
-	python3 ../ci/jinja2_render.py '{"service_base_image":{"image":"'$$(cat ../docker/service-base)'"}}' Dockerfile Dockerfile.out
+	python3 ../ci/jinja2_render.py '{"service_base_image":{"image":"'$$(cat ../docker/service-base-image-ref)'"}}' Dockerfile Dockerfile.out
 	../docker-build.sh . Dockerfile.out $(BATCH_IMAGE)
 
 .PHONY: build-worker
