--- a/docker/Makefile
+++ b/docker/Makefile
@@ -21,8 +21,8 @@ hail-ubuntu-image-ref: hail-ubuntu/Dockerfile hail-ubuntu/hail-pip-install hail-
 
 .PHONY: base base-image-ref
 base: base-image-ref
-base-image-ref: hail-ubuntu-stmp Dockerfile.base core-site.xml requirements.txt ../pylintrc ../setup.cfg
-	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"'$$(cat hail-ubuntu-stmp)'"}}' Dockerfile.base Dockerfile.base.out
+base-image-ref: hail-ubuntu-image-ref Dockerfile.base core-site.xml requirements.txt ../pylintrc ../setup.cfg
+	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"'$$(cat hail-ubuntu-image-ref)'"}}' Dockerfile.base Dockerfile.base.out
 	../docker-build.sh .. docker/Dockerfile.base.out $(BASE_IMAGE)
 	echo $(BASE_IMAGE) > $@
 
@@ -34,14 +34,14 @@ hail_version:
 .PHONY: service-base service-base-image-ref
 service-base: service-base-image-ref
 service-base-image-ref: base hail_version
-	python3 ../ci/jinja2_render.py '{"base_image":{"image":"'$$(cat base)'"}}' Dockerfile.service-base Dockerfile.service-base.out
+	python3 ../ci/jinja2_render.py '{"base_image":{"image":"'$$(cat base-image-ref)'"}}' Dockerfile.service-base Dockerfile.service-base.out
 	../docker-build.sh .. docker/Dockerfile.service-base.out $(SERVICE_BASE_IMAGE)
 	echo $(SERVICE_BASE_IMAGE) > $@
 
 .PHONY: service-java-run-base service-java-run-base-image-ref
 service-java-run-base: service-java-run-base-image-ref
-service-java-run-base-image-ref: hail-ubuntu-stmp hail_version
-	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"'$$(cat hail-ubuntu-stmp)'"}}' Dockerfile.service-java-run-base Dockerfile.service-java-run-base.out
+service-java-run-base-image-ref: hail-ubuntu-image-ref hail_version
+	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"'$$(cat hail-ubuntu-image-ref)'"}}' Dockerfile.service-java-run-base Dockerfile.service-java-run-base.out
 	../docker-build.sh .. docker/Dockerfile.service-java-run-base.out $(SERVICE_JAVA_RUN_BASE_IMAGE)
 	echo $(SERVICE_JAVA_RUN_BASE_IMAGE) > $@
 
@@ -50,9 +50,9 @@ deploy: build
 
 .PHONY: clean
 clean:
-	rm -f base hail-ubuntu-stmp base service-base service-java-run-base
+	rm -f base hail-ubuntu-image-ref base service-base service-java-run-base
 
 ## Public Images ###############################################################
 
-publish-public-images: hail-ubuntu-stmp
+publish-public-images: hail-ubuntu-image-ref
 	bash publish-public-images.sh $(DOCKER_PREFIX)
