--- a/monitoring/Makefile
+++ b/monitoring/Makefile
@@ -17,7 +17,7 @@ check:
 .PHONY: build
 build:
 	$(MAKE) -C ../docker service-base
-	python3 ../ci/jinja2_render.py '{"service_base_image":{"image":"'$$(cat ../docker/service-base)'"}}' Dockerfile Dockerfile.out
+	python3 ../ci/jinja2_render.py '{"service_base_image":{"image":"'$$(cat ../docker/service-base-image-ref)'"}}' Dockerfile Dockerfile.out
 	../docker-build.sh .. monitoring/Dockerfile.out $(MONITORING_IMAGE)
 
 .PHONY: deploy
