--- a/website/Makefile
+++ b/website/Makefile
@@ -2,9 +2,9 @@ include ../config.mk
 
 .PHONY: docs build run run-docker deploy clean
 
-TOKEN := $(shell cat /dev/urandom | LC_ALL=C tr -dc 'a-z0-9' | head -c 12)
+TOKEN = $(shell cat /dev/urandom | LC_ALL=C tr -dc 'a-z0-9' | head -c 12)
 
-IMAGE = $(DOCKER_PREFIX)/website:$(TOKEN)
+WEBSITE_IMAGE := $(DOCKER_PREFIX)/website:$(TOKEN)
 
 check:
 	curlylint .
@@ -15,8 +15,8 @@ docs:
 
 build: docs
 	$(MAKE) -C ../docker service-base
-	python3 ../ci/jinja2_render.py '{"service_base_image": {"image":"'$$(cat ../docker/service-base)'"}}' Dockerfile Dockerfile.out
-	../docker-build.sh . Dockerfile.out $(IMAGE)
+	python3 ../ci/jinja2_render.py '{"service_base_image": {"image":"'$$(cat ../docker/service-base-image-ref)'"}}' Dockerfile Dockerfile.out
+	../docker-build.sh . Dockerfile.out $(WEBSITE_IMAGE)
 
 run: docs
 	cd website && tar -xvzf ../docs.tar.gz
@@ -28,7 +28,7 @@ run-docker: build
 deploy: build
 	! [ -z $(NAMESPACE) ]  # call this like: make deploy NAMESPACE=default
 	$(MAKE) -C ../docker hail-ubuntu
-	python3 ../ci/jinja2_render.py '{"global": {"domain":"$(DOMAIN)"},"default_ns":{"name":"$(NAMESPACE)"},"code":{"sha":"$(shell git rev-parse --short=12 HEAD)"},"deploy":$(DEPLOY),"website_image":{"image":"$(IMAGE)"}}' deployment.yaml deployment.yaml.out
+	python3 ../ci/jinja2_render.py '{"global": {"domain":"$(DOMAIN)"},"default_ns":{"name":"$(NAMESPACE)"},"code":{"sha":"$(shell git rev-parse --short=12 HEAD)"},"deploy":$(DEPLOY),"website_image":{"image":"$(WEBSITE_IMAGE)"}}' deployment.yaml deployment.yaml.out
 	kubectl -n $(NAMESPACE) apply -f deployment.yaml.out
 
 clean:
