--- a/grafana/Makefile
+++ b/grafana/Makefile
@@ -2,23 +2,17 @@ include ../config.mk
 
 .PHONY: build push deploy
 
-GRAFANA_NGINX_LATEST = $(DOCKER_PREFIX)/grafana_nginx:latest
-GRAFANA_NGINX_IMAGE = $(DOCKER_PREFIX)/grafana_nginx:$(shell docker images -q --no-trunc grafana_nginx | sed -e 's,[^:]*:,,')
+TOKEN = $(shell cat /dev/urandom | LC_ALL=C tr -dc 'a-z0-9' | head -c 12)
+
+GRAFANA_NGINX_IMAGE := $(DOCKER_PREFIX)/grafana_nginx:$(TOKEN)
 
 build:
 	$(MAKE) -C ../docker hail-ubuntu
-	-docker pull $(GRAFANA_NGINX_LATEST)
-	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"hail-ubuntu"}}' Dockerfile.nginx Dockerfile.nginx.out
+	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"'$$(cat ../docker/hail-ubuntu-image-ref)'"}}' Dockerfile.nginx Dockerfile.nginx.out
 	python3 ../ci/jinja2_render.py '{"deploy": $(DEPLOY), "default_ns": {"name": "$(NAMESPACE)"}}' nginx.conf nginx.conf.out
-	docker build -t grafana_nginx -f Dockerfile.nginx.out --cache-from grafana_nginx,$(GRAFANA_NGINX_LATEST),hail-ubuntu .
+	../docker-build.sh . Dockerfile.nginx.out $(GRAFANA_NGINX_IMAGE)
 
-push: build
-	docker tag grafana_nginx $(GRAFANA_NGINX_LATEST)
-	docker push $(GRAFANA_NGINX_LATEST)
-	docker tag grafana_nginx $(GRAFANA_NGINX_IMAGE)
-	docker push $(GRAFANA_NGINX_IMAGE)
-
-deploy: push
+deploy: build
 	! [ -z $(NAMESPACE) ]  # call this like: make deploy NAMESPACE=default
 	python3 ../ci/jinja2_render.py '{"deploy":$(DEPLOY),"default_ns":{"name":"$(NAMESPACE)"}, "grafana_nginx_image": {"image": "$(GRAFANA_NGINX_IMAGE)"}}' deployment.yaml deployment.yaml.out
 	kubectl -n $(NAMESPACE) apply -f deployment.yaml.out
